Fix these mistakes

--- a/red currants.html
+++ b/red currants.html
@@ -15,11 +15,13 @@
       <li><a href="index.html">Home</a></li>
       <li><a href="blueberries.html">Blueberries</a></li>
       <li><a href="grapes.html">Grapes</a></li>
-      <li><a href="red currants">Red Currants</a></li>
+      <li><a href="red currants.html">Red Currants</a></li>
 </header>
-  <h2>Berries, berries, oh my!</h2>
+  <h2>Red currants</h2>
 <article>
-  <p>In everyday English, “berry” is a term for any <b>small edible fruit</b>. These “berries” are usually <b>juicy</b>, <b>round</b>, <b>brightly coloured</b>, sweet or sour, and do not have a stone or pit, although many seeds may be present.</p>
+  <img src="images/red-currants.jpg" alt="">
+  <p>With maturity, the tart flavour of redcurrant fruit is slightly greater than its blackcurrant relative, but with the same approximate sweetness.
+</p>
 </article>
 <footer>
   <p>© Berries.</p>
