--- a/grapes.html
+++ b/grapes.html
@@ -13,14 +13,15 @@
   <nav>
     <ul class="nav">
       <li><a href="index.html">Home</a></li>
-      <li><a href="#">Blueberries</a></li>
+      <li><a href="blueberries.html">Blueberries</a></li>
       <li><a href="grapes.html">Grapes</a></li>
-      <li><a href="#">Red Currants</a></li>
+      <li><a href="red currants.html">Red Currants</a></li>
 </header>
-  <h2>Berries, berries, oh my!</h2>
+  <h2>Grapes</h2>
 <article>
-  <p>In everyday English, “berry” is a term for any <b>small edible fruit</b>. These “berries” are usually <b>juicy</b>, <b>round</b>, <b>brightly coloured</b>, sweet or sour, and do not have a stone or pit, although many seeds may be present.</p>
-
+  <img src="images/grapes.jpg" alt="">
+  <p>Grapes can be eaten raw or they can be used for making wine, jam, juice, jelly, grape seed extract, raisins, vinegar, and grape seed oil.</p>
+</article>
 <footer>
   <p>© Berries.</p>
 
