Change the title

--- a/red-currants.html
+++ b/red-currants.html
@@ -2,7 +2,7 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Bluberries</title>
+  <title>Red Currants</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Sigmar+One" rel="stylesheet">
@@ -15,7 +15,7 @@
       <li><a href="index.html">Home</a></li>
       <li><a href="blueberries.html">Blueberries</a></li>
       <li><a href="grapes.html">Grapes</a></li>
-      <li><a href="red currants.html">Red Currants</a></li>
+      <li><a href="red-currants.html">Red Currants</a></li>
 </header>
   <h2>Red currants</h2>
 <article>
