Close unclosed tags

--- a/red-currants.html
+++ b/red-currants.html
@@ -8,6 +8,7 @@
   <link href="https://fonts.googleapis.com/css?family=Sigmar+One" rel="stylesheet">
 </head>
 
+<body>
 <header>
   <h1>Berries</h1>
   <nav>
@@ -16,6 +17,8 @@
       <li><a href="blueberries.html">Blueberries</a></li>
       <li><a href="grapes.html">Grapes</a></li>
       <li><a href="red-currants.html">Red Currants</a></li>
+    </ul>
+  </nav>
 </header>
   <h2>Red currants</h2>
 <article>
@@ -23,12 +26,10 @@
   <p>With maturity, the tart flavour of redcurrant fruit is slightly greater than its blackcurrant relative, but with the same approximate sweetness.
 </p>
 </article>
+</body>
+
 <footer>
   <p>© Berries.</p>
+</footer>
 
-<body>
-
-
-
-</body>
 </html>
