--- a/grapes.html
+++ b/grapes.html
@@ -8,6 +8,7 @@
   <link href="https://fonts.googleapis.com/css?family=Sigmar+One" rel="stylesheet">
 </head>
 
+<body>
 <header>
   <h1>Berries</h1>
   <nav>
@@ -16,18 +17,19 @@
       <li><a href="blueberries.html">Blueberries</a></li>
       <li><a href="grapes.html">Grapes</a></li>
       <li><a href="red-currants.html">Red Currants</a></li>
+    </ul>
+  </nav>
 </header>
   <h2>Grapes</h2>
 <article>
   <img src="images/grapes.jpg" alt="">
   <p>Grapes can be eaten raw or they can be used for making wine, jam, juice, jelly, grape seed extract, raisins, vinegar, and grape seed oil.</p>
 </article>
-<footer>
-  <p>© Berries.</p>
-
-<body>
-
-
 
 </body>
+
+<footer>
+  <p>© Berries.</p>
+</footer>
+
 </html>
