--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link href="https://fonts.googleapis.com/css?family=Sigmar+One" rel="stylesheet">
 </head>
 
+<body>
 <header>
   <h1>Berries</h1>
   <nav>
@@ -16,17 +17,17 @@
       <li><a href="blueberries.html">Blueberries</a></li>
       <li><a href="grapes.html">Grapes</a></li>
       <li><a href="red-currants">Red Currants</a></li>
+    </ul>
+  </nav>
 </header>
   <h2>Berries, berries, oh my!</h2>
 <article>
   <p>In everyday English, “berry” is a term for any <b>small edible fruit</b>. These “berries” are usually <b>juicy</b>, <b>round</b>, <b>brightly coloured</b>, sweet or sour, and do not have a stone or pit, although many seeds may be present.</p>
 </article>
+</body>
+
 <footer>
   <p>© Berries.</p>
+</footer>
 
-<body>
-
-
-
-</body>
 </html>
