--- a/blueberries.html
+++ b/blueberries.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-ca">
+
 <head>
   <meta charset="utf-8">
   <title>Bluberries</title>
@@ -9,30 +10,26 @@
 </head>
 
 <body>
-<header>
-  <h1>Berries</h1>
-  <nav>
-    <ul class="nav">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="blueberries.html">Blueberries</a></li>
-      <li><a href="grapes.html">Grapes</a></li>
-      <li><a href="red-currants.html">Red Currants</a></li>
-    </ul>
-  </nav>
-</header>
+  <header>
+    <h1>Berries</h1>
+    <nav>
+      <ul class="nav">
+        <li><a href="index.html">Home</a></li>
+        <li><a class="current" href="blueberries.html">Blueberries</a></li>
+        <li><a href="grapes.html">Grapes</a></li>
+        <li><a href="red-currants.html">Red Currants</a></li>
+      </ul>
+    </nav>
+  </header>
   <h2>Blueberries</h2>
-<article>
-  <img src="images/blueberries.jpg" alt="">
-  <p>Blueberries are perennial flowering plants with indigo-colored berries. Most common fruits sold as “blueberries” and are native to North America.
-</p>
-</article>
+  <article>
+    <img src="images/blueberries.jpg" alt="">
+    <p>Blueberries are perennial flowering plants with indigo-colored berries. Most common fruits sold as “blueberries” and are native to North America.</p>
+  </article>
 
-<footer>
-  <p>© Berries.</p>
-</footer>
-
+  <footer>
+    <p>© Berries.</p>
+  </footer>
 
 </body>
-
-
 </html>
