--- a/grapes.html
+++ b/grapes.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-ca">
+
 <head>
   <meta charset="utf-8">
   <title>Grapes</title>
@@ -9,27 +10,27 @@
 </head>
 
 <body>
-<header>
-  <h1>Berries</h1>
-  <nav>
-    <ul class="nav">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="blueberries.html">Blueberries</a></li>
-      <li><a href="grapes.html">Grapes</a></li>
-      <li><a href="red-currants.html">Red Currants</a></li>
-    </ul>
-  </nav>
-</header>
-  <h2>Grapes</h2>
-<article>
-  <img src="images/grapes.jpg" alt="">
-  <p>Grapes can be eaten raw or they can be used for making wine, jam, juice, jelly, grape seed extract, raisins, vinegar, and grape seed oil.</p>
-</article>
-
-<footer>
-  <p>© Berries.</p>
-</footer>
+  <header>
+    <h1>Berries</h1>
+    <nav>
+      <ul class="nav">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="blueberries.html">Blueberries</a></li>
+        <li><a class="current" href="grapes.html">Grapes</a></li>
+        <li><a href="red-currants.html">Red Currants</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <h2>Grapes</h2>
+    <article>
+      <img src="images/grapes.jpg" alt="">
+      <p>Grapes can be eaten raw or they can be used for making wine, jam, juice, jelly, grape seed extract, raisins, vinegar, and grape seed oil.</p>
+    </article>
+  </main>
+  <footer>
+    <small>© Berries.</small>
+  </footer>
 
 </body>
-
 </html>
