--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-ca">
+
 <head>
   <meta charset="utf-8">
   <title>Home</title>
@@ -7,27 +8,27 @@
   <link href="css/main.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Sigmar+One" rel="stylesheet">
 </head>
-
 <body>
-<header>
-  <h1>Berries</h1>
-  <nav>
-    <ul class="nav">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="blueberries.html">Blueberries</a></li>
-      <li><a href="grapes.html">Grapes</a></li>
-      <li><a href="red-currants">Red Currants</a></li>
-    </ul>
-  </nav>
-</header>
-  <h2>Berries, berries, oh my!</h2>
-<article>
-  <p>In everyday English, “berry” is a term for any <b>small edible fruit</b>. These “berries” are usually <b>juicy</b>, <b>round</b>, <b>brightly coloured</b>, sweet or sour, and do not have a stone or pit, although many seeds may be present.</p>
-</article>
-
-<footer>
-  <p>© Berries.</p>
-</footer>
+  <header>
+    <h1>Berries</h1>
+    <nav>
+      <ul class="nav">
+        <li><a class="current" href="index.html">Home</a></li>
+        <li><a href="blueberries.html">Blueberries</a></li>
+        <li><a href="grapes.html">Grapes</a></li>
+        <li><a href="red-currants.html">Red Currants</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <h2>Berries, berries, oh my!</h2>
+    <article>
+      <p>In everyday English, “berry” is a term for any <b>small edible fruit</b>. These “berries” are usually <b>juicy</b>, <b>round</b>, <b>brightly coloured</b>, sweet or sour, and do not have a stone or pit, although many seeds may be present.</p>
+    </article>
+  </main>
+  <footer>
+    <small>© Berries.</small>
+  </footer>
 
 </body>
 
