--- a/red-currants.html
+++ b/red-currants.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-ca">
+
 <head>
   <meta charset="utf-8">
   <title>Red Currants</title>
@@ -9,27 +10,26 @@
 </head>
 
 <body>
-<header>
-  <h1>Berries</h1>
-  <nav>
-    <ul class="nav">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="blueberries.html">Blueberries</a></li>
-      <li><a href="grapes.html">Grapes</a></li>
-      <li><a href="red-currants.html">Red Currants</a></li>
-    </ul>
-  </nav>
-</header>
+  <header>
+    <h1>Berries</h1>
+    <nav>
+      <ul class="nav">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="blueberries.html">Blueberries</a></li>
+        <li><a href="grapes.html">Grapes</a></li>
+        <li><a class="current" href="red-currants.html">Red Currants</a></li>
+      </ul>
+    </nav>
+  </header>
   <h2>Red currants</h2>
-<article>
-  <img src="images/red-currants.jpg" alt="">
-  <p>With maturity, the tart flavour of redcurrant fruit is slightly greater than its blackcurrant relative, but with the same approximate sweetness.
-</p>
-</article>
+  <article>
+    <img src="images/red-currants.jpg" alt="">
+    <p>With maturity, the tart flavour of redcurrant fruit is slightly greater than its blackcurrant relative, but with the same approximate sweetness.</p>
+  </article>
 
-<footer>
-  <p>© Berries.</p>
-</footer>
+  <footer>
+    <p>© Berries.</p>
+  </footer>
 
 </body>
 
